GNU bug report logs - #11468
[2.0.5] ‘%port-conversion-strategy’ broken & undocumented

Previous Next

Package: guile;

Reported by: ludo <at> gnu.org (Ludovic Courtès)

Date: Mon, 14 May 2012 15:25:02 UTC

Severity: normal

Done: ludo <at> gnu.org (Ludovic Courtès)

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 11468 in the body.
You can then email your comments to 11468 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-guile <at> gnu.org:
bug#11468; Package guile. (Mon, 14 May 2012 15:25:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to ludo <at> gnu.org (Ludovic Courtès):
New bug report received and forwarded. Copy sent to bug-guile <at> gnu.org. (Mon, 14 May 2012 15:25:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: ludo <at> gnu.org (Ludovic Courtès)
To: bug-guile <at> gnu.org
Subject: [2.0.5] ‘%port-conversion-strategy’
	broken & undocumented
Date: Mon, 14 May 2012 17:23:51 +0200
‘%port-conversion-strategy’ is not documented, and its relation to
‘scm_to_stringn’ is not documented either.

Worse:

  scheme@(guile-user)> (fluid-set! %port-conversion-strategy 'error)
  Segmentation fault

Indeed, an integer is expected:

  scheme@(guile-user)> (fluid-ref %port-conversion-strategy)
  $2 = 1

Fix to expect a symbol like ‘set-port-conversion-strategy!’?

Ludo’.




Reply sent to ludo <at> gnu.org (Ludovic Courtès):
You have taken responsibility. (Wed, 30 May 2012 22:59:02 GMT) Full text and rfc822 format available.

Notification sent to ludo <at> gnu.org (Ludovic Courtès):
bug acknowledged by developer. (Wed, 30 May 2012 22:59:02 GMT) Full text and rfc822 format available.

Message #10 received at 11468-done <at> debbugs.gnu.org (full text, mbox):

From: ludo <at> gnu.org (Ludovic Courtès)
To: 11468-done <at> debbugs.gnu.org
Subject: Re: bug#11468: [2.0.5] ‘%port-conversion-strategy’ broken & undocumented
Date: Thu, 31 May 2012 00:57:01 +0200
ludo <at> gnu.org (Ludovic Courtès) skribis:

> ‘%port-conversion-strategy’ is not documented, and its relation to
> ‘scm_to_stringn’ is not documented either.

Fixed in commit b22e94db7c91d7661204e33f3bc2bfead002c9b7, in stable-2.0.

Comments welcome!

Thanks,
Ludo’.




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Thu, 28 Jun 2012 11:24:02 GMT) Full text and rfc822 format available.

This bug report was last modified 11 years and 314 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.